<resources>
    <string name="app_name">NUMAD18S-FengWan</string>
    <string name="my_name">Feng Wan</string>
    <string name="my_email">wan.fe@husky.neu.edu</string>
    <string name="my_year_in_school">3rd Year in ALIGN program</string>
    <string name="about_me">About Me</string>
    <string name="generate_error">Generate Error</string>
    <string name="fail_to_get_unique_id">Fail to get unique ID</string>
    <string name="fail_to_get_version_info">Fail to get version info</string>
    <string name="error_generated">An error has been generated!</string>
    <string name="labe_version_name">Version Name</string>
    <string name="label_version_code">Version Code</string>
    <string name="labe_unique_id">Unique ID</string>
    <string name="type_a_word">Type a word here ...</string>
    <string name="type_name">Type name for word game ...</string>
    <string name="word_list_title">Words added:</string>
    <string name="dictionary">Dicionary</string>
    <string name="acknowledgments">Acknowledgments</string>
    <string name="stack_overflow">I got a lot of technical help from\nhttps://stackoverflow.com/questions/tagged/android</string>
    <string name="icon_generator">I created my app icon on\nhttps://romannurik.github.io/AndroidAssetStudio/icons-launcher.html</string>
    <string name="beep_sound">I download the beep sound from\nhttps://notificationsounds.com/notification-sounds/plucky-564</string>
    <string name="clear">Clear</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="long_app_name">Scroggle by Feng Wan</string>
    <string name="action_settings">Settings</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="change_name">Change Name</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="kudos">Kudos</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_label">How to play</string>
    <string name="ok_label">OK</string>
    <string name="about_text">
        Scroggle game has two phases.\n\n
        Phase 1 (90 sec) \nPlayer try to find word in each of the 9 smaller 3X3 board.\n\n
        Phase 2 (30 sec) \nOnly matched word selected from phase 1 will be kept and player need find word using one letter from each remaining word.\n\n
        How to select word? \nClick on any letter to start and continue with its neighbour letter.\n\n
        How to go back a step? \nClick on the last word you selected again, will go back to last step. The last word is indicated by animation.\n\n
        How to win? \nA score is calculated as you play, the higher score the better.\n\n
        How is the score calculated? \nIn phase 1, score = length of word * 5; in phase 2, score = length * 10. Final socre is sum of scores from phase 1 and 2.\n\n
    </string>
</resources>
